fixed dispplay of navlogo on small screens none

--- a/css/pages/about-me.css
+++ b/css/pages/about-me.css
@@ -90,31 +90,7 @@ small {
 }
 
 
-@media only screen and (min-width: 1010px)  {
-    .nav {
-   font-size: 1.1rem;
- }
 
- .nav_logo {
-  display: none;
- }
-}
-
-
-
-
-/*is less than or equal to 900px*/
-@media only screen and (max-width: 1100px)  {
-
-  .nav {
-    bottom: 0%;
-    left: 50%;
-    right: 0;
-  }
-  .nav__list {
-    flex-direction: column;
-  }
-}
 
 @media only screen and (min-width: 1320px)  {
  .about_me_text {
