--- a/css/style.css
+++ b/css/style.css
@@ -102,6 +102,37 @@ body {
   }
 }
 
+
+@media only screen and (max-width: 1100px)  {
+  .nav_logo {
+    display: none;
+  }
+}
+
+
+@media only screen and (min-width: 1010px)  {
+  .nav {
+   font-size: 1.1rem;
+  }
+
+}
+
+
+/*is less than or equal to 900px*/
+@media only screen and (max-width: 1100px)  {
+
+  .nav {
+    bottom: 0%;
+    left: 50%;
+    right: 0;
+  }
+  .nav__list {
+    flex-direction: column;
+  }
+
+}
+
+
 :focus {
     /*outline: 3px solid var(--clr-accent);
     outline-offset: 2px;*/
